[project]
name = "pref-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Itsuki Kuwahara",email = "248c117c@stu.kobe-u.ac.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "numba (>=0.61.0,<0.62.0)",
    "shap (>=0.46.0,<0.47.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
